--- a/lists/templates/home.html
+++ b/lists/templates/home.html
@@ -1,6 +1,13 @@
-<h1>Your To-Do list</h1>
-<form method="POST">
-    <input name="item_text" id="id_new_item" placeholder="Enter a to-do item" />
-</form>
+<html>
+    <head>
+        <title>To-Do lists</title>
+    </head>
 
-<table id="id_list_table">
+    <body>
+        <h1>Start a new To-Do list</h1>
+        <form method="POST" action="/lists/new">
+            <input name="item_text" id="id_new_item" placeholder="Enter a to-do item" />
+            {% csrf_token %}
+        </form>
+    </body>
+</html>
